--- a/emprestimo.html
+++ b/emprestimo.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light background-nav">
         <div class="container-fluid">
-          <a class="navbar-brand fs-1 text-warning" href="inicio.html">Crédito para Todxs</a>
+          <a class="navbar-brand fs-1 text-warning" href="index.html">Crédito para Todxs</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
