--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light background-nav">
         <div class="container-fluid">
-          <a class="navbar-brand fs-1 text-warning" href="inicio.html">Crédito para Todxs</a>
+          <a class="navbar-brand fs-1 text-warning" href="index.html">Crédito para Todxs</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link fs-5 text-light bg-warning nav-padding border border-danger border-3 rounded nav-ativo" aria-current="page" href="inicio.html">Início</a>
+                <a class="nav-link fs-5 text-light bg-warning nav-padding border border-danger border-3 rounded nav-ativo" aria-current="page" href="index.html">Início</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fs-5 text-light bg-warning nav-padding border border-danger border-3 rounded" href="emprestimo.html">Solicite um empréstimo</a>
