--- a/index.html
+++ b/index.html
@@ -10,27 +10,37 @@
     <title>Crédito para Todxs</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light background-nav">
-        <div class="container-fluid">
-          <a class="navbar-brand fs-1 text-warning" href="index.html">Crédito para Todxs</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link fs-5 text-light bg-warning nav-padding border border-danger border-3 rounded nav-ativo" aria-current="page" href="index.html">Início</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link fs-5 text-light bg-warning nav-padding border border-danger border-3 rounded" href="emprestimo.html">Solicite um empréstimo</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link fs-5 text-light bg-warning nav-padding border border-danger border-3 rounded" href="sobre.html">Sobre</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <!--MENU DE NAVEGAÇÃO-->
+  <nav class="navbar navbar-expand-lg navbar-light background-purple">
+    <div class="container-fluid">
+      <a class="navbar-brand fs-1 text-warning" href="index.html">Crédito para Todxs</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link fs-5 text-light bg-warning nav-padding border border-danger border-3 rounded nav-ativo" aria-current="page" href="index.html">Início</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fs-5 text-light bg-warning nav-padding border border-danger border-3 rounded nav-button" href="emprestimo.html">Solicite um empréstimo</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fs-5 text-light bg-warning nav-padding border border-danger border-3 rounded nav-button" href="sobre.html">Sobre</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    </nav>
     
+
+
+  <!--RODAPÉ-->
+    <footer>
+      <div class="background-purple footer-content">
+        <p class="fs-6 text-warning">Todos os direitos reservados © 2021</p>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
