Início do site finalizado
Carrosel e botão de solicitar empréstimo inclusos

--- a/index.html
+++ b/index.html
@@ -32,12 +32,57 @@
       </div>
     </div>
     </nav>
-    
 
+    <!--CARROSEL-->
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img sizes="(max-width: 320px) 280px,
+         (max-width: 480px) 440px,
+         800px"src="https://images.unsplash.com/photo-1553729459-efe14ef6055d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80" class="d-block w-100" alt="Mulher segurando dinheiro">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="text-purple fw-bold fs-2">Faça seu empréstimo de forma facilitada</h5>
+            <p class="text-purple fw-normal fs-4">Tenha o dinheiro em pouco tempo, com baixas taxas de juro e pagamento flexibilizado.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://images.unsplash.com/photo-1517554558809-9b4971b38f39?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" class="d-block w-100" alt="Família no campo">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="text-purple fw-bold fs-2">Passe mais tempo com quem você ama</h5>
+            <p class="text-purple fw-normal fs-4">Liberte-se de suas dívidas e aproveite seu tempo com quem você ama.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://images.unsplash.com/photo-1516156008625-3a9d6067fab5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80" class="d-block w-100" alt="Casas vistas de cima">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 class="text-purple fw-bold fs-2">Seu sonho mais próximo</h5>
+            <p class="text-purple fw-normal fs-4">Seu sonho está mais perto do que você imagina.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Próximo</span>
+      </button>
+    </div>
+
+    <!--BOTÃO SOLICITE UM EMPRÉSTIMO-->
+    <div class="my-container">
+      <button type="button" class="btn btn-warning botao-emprestimo fs-2 fw-normal"><a href="emprestimo.html">Solicite seu empréstimo já!</a></button>
+    </div>
 
   <!--RODAPÉ-->
     <footer>
-      <div class="background-purple footer-content">
+      <div class="background-purple footer-content text-warning">
         <p class="fs-6 text-warning">Todos os direitos reservados © 2021</p>
       </div>
     </footer>
