--- a/emprestimo.html
+++ b/emprestimo.html
@@ -275,9 +275,10 @@
   </div>
 
 
-  <div class="my-container"> <!--EXCLUIR-->
+<!-- BOTÃO PARA TESTES - EXCLUIR
+  <div class="my-container">
     <a class="btn btn-warning botao-inicio" data-bs-toggle="modal" href="#opcoesEmprestimo" role="button">Botão teste</a>
-  </div> <!--EXCLUIR-->
+  </div> EXCLUIR -->
 
   <!--Falta incluir cabeçalho para o botão-->
 
